Added setters and getters for full recipe import

--- a/RecipeApp/WebContent/RecipeInsert.html
+++ b/RecipeApp/WebContent/RecipeInsert.html
@@ -36,7 +36,7 @@ footer {
 </header>
 
 <nav>
-<a href="/RecipeApp/RecipeSearch.html">Search Data</a> <br>
+<a href="/RecipeApp/SimpleRecipeSearch.html">Search Data</a> <br>
 </nav>
 
 <section>
@@ -45,9 +45,9 @@ footer {
 	<form action="RecipeInsert" method="POST">
 	
 		Recipe Name: <input type="text" name="RecipeName"> <br />
-		Ingredient: <input type="text" name="amount1" value="amount"> 
+		<label for="ingredient1"></label>Ingredient: <input type="text" name="amount1" value="Quantity"> 
 		<input type="text" name="ingredient1" value="Ingredient">
-		<input type="text" name="prep1" value="Preperation">
+		<input type="text" name="prep1" value="Preparation">
 		<br />
 		
 		<input type="submit" value="Submit" />
