--- a/RecipeApp/WebContent/SimpleRecipeSearch.html
+++ b/RecipeApp/WebContent/SimpleRecipeSearch.html
@@ -1,45 +1,36 @@
+<!DOCTYPE html>
 <html>
-<head>
+<title>RecipeApp</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
 <style>
-header {
-    background-color:black;
-    color:white;
-    text-align:center;
-    padding:5px;	 
-}
-nav {
-    line-height:30px;
-    background-color:#eeeeee;
-    height:300px;
-    width:100px;
-    float:left;
-    padding:5px;	      
-}
-section {
-    width:350px;
-    float:left;
-    padding:10px;	 	 
-}
-footer {
-    background-color:black;
-    color:white;
-    clear:both;
-    text-align:center;
-    padding:5px;	 	 
-}
+body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
+.w3-bar-block .w3-bar-item {padding:20px}
 </style>
 </head>
 
 <body>
-<header>
-<h1> Search Recipes </h1>
-</header>
-
-<nav>
-<a href="/RecipeApp/RecipeInsert.html">Insert Data</a> <br>
+<!-- Sidebar (hidden by default) -->
+<nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
+  <a href="javascript:void(0)" onclick="w3_close()"
+  class="w3-bar-item w3-button">Close Menu</a>
+  <a href="#food" onclick="w3_close()" class="w3-bar-item w3-button">Food</a>
+  <a href="/RecipeApp/RecipeInsert.html" onclick="w3_close()" class="w3-bar-item w3-button">Recipe Insert</a>
 </nav>
+<!-- Top menu -->
+<div class="w3-top">
+  <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
+    <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
+    <div class="w3-right w3-padding-16"><a href="/RecipeApp/Index.htm">Recipes</a></div>
+    <div class="w3-center w3-padding-16">Search</div>
+  </div>
+</div>
 
-<section>
+<div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:100px">
+
+	<div>
 	<h1>User Input</h1>
 	
 	<form action="RecipeSearch" method="POST">
@@ -49,10 +40,27 @@ footer {
 		<input type="submit" value="Search" />
 	</form>
 
-</section>
+	</div>
 
-<footer>
-Copyright
-</footer>
+<!-- Footer -->
+  <footer class="w3-row-padding w3-padding-32">
+    <div class="w3-third">
+      <h3>FOOTER</h3>
+      <p>A simple recipe display site.</p>
+      <p>Parts Borrowed from Class and <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+    </div>
+  </footer>
+  
+</div>
+  <script>
+// Script to open and close sidebar
+function w3_open() {
+  document.getElementById("mySidebar").style.display = "block";
+}
+ 
+function w3_close() {
+  document.getElementById("mySidebar").style.display = "none";
+}
+</script>
 </body>
 </html>
