--- a/RecipeApp/WebContent/SimpleRecipeSearch.html
+++ b/RecipeApp/WebContent/SimpleRecipeSearch.html
@@ -22,7 +22,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 <!-- Top menu -->
 <div class="w3-top">
   <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
-    <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
+    <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">=</div>
     <div class="w3-right w3-padding-16"><a href="/RecipeApp/Index">Recipes</a></div>
     <div class="w3-center w3-padding-16">Search</div>
   </div>
