--- a/RecipeApp/WebContent/FileUpload.html
+++ b/RecipeApp/WebContent/FileUpload.html
@@ -6,7 +6,7 @@
 	<body>
 		<form action="upload" method="POST" enctype="multipart/form-data">
 			<p>What's your name?</p>
-			<input type="text" name="name" value="Ada">
+			<input type="text" name="name" value="Jerry">
 			<p>What file do you want to upload?</p>
 			<input type="file" name="fileToUpload">
 			<br/><br/>
