--- a/RecipeApp/WebContent/RecipeInsert.html
+++ b/RecipeApp/WebContent/RecipeInsert.html
@@ -13,7 +13,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 
 <body>
 <!-- Sidebar (hidden by default) -->
-<nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
+<nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:25%;min-width:300px" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()"
   class="w3-bar-item w3-button">Close Menu</a>
   <a href="/RecipeApp/Index" onclick="w3_close()" class="w3-bar-item w3-button">Food</a>
@@ -22,15 +22,15 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 <!-- Top menu -->
 <div class="w3-top">
   <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
-    <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
+    <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()"><img alt="menu" src="Images/menu.jpg" style="width:30px"></div>
     <div class="w3-right w3-padding-16"><a href="/RecipeApp/SimpleRecipeSearch.html">Search</a></div>
-    <div class="w3-center w3-padding-16">Insert Recipe</div>
+    <div class="w3-center w3-padding-16"><a href="/RecipeApp/Index">Recipes</a></div>
   </div>
 </div>
 <div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:100px">
 	<div class="w3-row-padding w3-padding-16 w3-center">
     
-			
+			<h1>New Recipe</h1>
 		<form action="RecipeInsert" method="POST" enctype="multipart/form-data">
 			
 			Recipe Name: <input type="text" name="recipename"> <br />
